# email-transaction-extractor

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sqlite.db
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 10cf304fd028_add_bank_name_and_bank_email_columns.py  1d0bcd318aef_modified_database_url_based_on_.py  cb660bcfeb34_initial_migration.py
deprecated_cli_version_1/email/: client.py  promerica.py
deprecated_cli_version_1/models/: enums.py  protocols.py
deprecated_cli_version_1/services/: __init__.py  transaction_report.py
email_finance_api/: __init__.py  byte_bud.md
email_finance_api/models/: __init__.py
email_finance_api/templates/: promerica.py
email_finance_api/utils/: regex.py
email_transaction_extractor/: __init__.py  __main__.py  config.py  database.py  exceptions.py  main.py  typing.py
email_transaction_extractor/configuration/: _cli.py
email_transaction_extractor/email/: __init__.py  client.py  processing.py  promerica.py
email_transaction_extractor/models/: __init__.py  email.py  enums.py  protocols.py  reports.py  transaction.py
email_transaction_extractor/repositories/: __init__.py  generic_repository.py  transaction_repository.py
email_transaction_extractor/routers/: __init__.py  transactions.py
email_transaction_extractor/schemas/: __init__.py  api_response.py  request.py  transaction.py
email_transaction_extractor/services/: __init__.py  email_service.py  generic_service.py  (+3 more)
email_transaction_extractor_v1/: __main__.py
tests/: test_transactions.py
(+53 files in other folders)
