[tool.poetry]
name = "email-finance-api"
version = "0.1.0"
description = ""
authors = ["Sebastian Soto <apps.uptime@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "email_finance_api:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
rope = "^1.13.0"
pytest = "^8.2.2"
autopep8 = "^2.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
