[tool.poetry]
name = "email_transaction_extractor"
version = "0.1.0"
description = ""
authors = ["Sebastian Soto <apps.uptime@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runserver = "email_transaction_extractor.__main__:run"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.2"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
pytest = "^8.2.2"
install = "^1.3.5"
fastapi = "^0.111.0"
apscheduler = "^3.10.4"
psycopg2-binary = "^2.9.9"
mangum = "^0.17.0"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
rope = "^1.13.0"
pytest = "^8.2.2"
autopep8 = "^2.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
